Fixed form page to work on mobile

--- a/Form/CSS/form.css
+++ b/Form/CSS/form.css
@@ -48,3 +48,33 @@ a:hover{
 a:visited{
     color:teal;
 }
+
+@media screen and (max-width: 600px) {
+    .grid-container{
+        grid-template-rows: auto auto;
+        grid-template-columns: auto;
+        justify-content: center;
+    }
+    .video1{
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        max-width: 85%;
+        max-height: auto;
+    }
+    .video2{
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        max-width: 85%;
+        max-height: auto;
+    }
+    .flex-container{
+        max-width: 95%;
+    }
+    .flex-item{
+        max-width: 45%;
+        max-height: auto;
+    }
+    a#navbar{
+        font-size: 100%;
+    }
+}
